--- a/docs/references/references.bib
+++ b/docs/references/references.bib
@@ -305,3 +305,13 @@
 	Number = {SAND2016-10163},
 	Title = {SIERRA Low Mach Module: Fuego Theory Manual - Version 4.42},
 	Year = {2016}}
+
+@phdthesis{Martinez-Tossas2017,
+  author       = {Luis A Mart{\'i}nez-Tossas}, 
+  title        = {Large Eddy Simulations and Theoretical Analysis of Wind
+                  Turbine Aerodynamics Using an Actuator Line Model},
+  school       = {Johns Hopkins University},
+  year         = 2017,
+  address      = {Baltimore, MD USA},
+  month        = {July}
+}
