--- a/docs/references/references.bib
+++ b/docs/references/references.bib
@@ -330,3 +330,16 @@
   OPTnote =      {},
   OPTannote =    {}
 }
+
+@inbook{HaeringAIAA,
+author = {Sigfried Haering and Todd Oliver and Robert D. Moser},
+title = {Towards a Predictive Hybrid RANS/LES Framework},
+booktitle = {AIAA Scitech 2019 Forum},
+chapter = {},
+pages = {},
+doi = {10.2514/6.2019-0087},
+URL = {https://arc.aiaa.org/doi/abs/10.2514/6.2019-0087},
+eprint = {https://arc.aiaa.org/doi/pdf/10.2514/6.2019-0087},
+publisher = {AIAA},
+year= {2019}
+}
