Add missing institution for authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,7 +7,7 @@ Domino, Stefan (SNL) <spdomin@sandia.gov>
 Henry de Frahan, Marc (NREL) <marc.henrydefrahan@nrel.gov>
 Knaus, Robert (SNL) <rcknaus@sandia.gov>
 Lund, Thomas (NWRA) <lund@nwra.com>
-Martinez, Luis (Tony) <luis.martinez@nrel.gov>
+Martinez, Luis (Tony) (NREL) <luis.martinez@nrel.gov>
 Melvin, Jeremy (Univ. of Texas, Austin) <jmelvin@ices.utexas.edu>
 Overfelt, James R. (SNL) <joverf@sandia.gov>
 Rood, Jon (NREL) <jon.rood@nrel.gov>
