--- a/reg_tests/test_files/ablNeutralStat/README
+++ b/reg_tests/test_files/ablNeutralStat/README
@@ -19,9 +19,11 @@ layer.  Because of constant density used here, because we do not include
 pressure work term in the enthalpy equation, and becuase we use Boussinesq
 buoyancy, temperature is potential temperature.
 
-- To build the mesh, use NaluWindUtils abl_mesh with nalu_abl_mesh.yaml
-- To initialze the fiels, use NaluWindUtils nalu_preprocess with 
-  nalu_preprocess.yaml
+- To build the mesh, use wind-utils abl_mesh with nalu_abl_mesh.yaml
+  (from ablNeutralEdge)
+
+- To initialze the fiels, use wind-utils nalu_preprocess with 
+  nalu_preprocess.yaml (from ablNeutralEdge)
 
 Domain: 
   - x: 0 m - 5000 m
