Update to TAMS framework

--- a/docs/references/references.bib
+++ b/docs/references/references.bib
@@ -343,3 +343,15 @@ eprint = {https://arc.aiaa.org/doi/pdf/10.2514/6.2019-0087},
 publisher = {AIAA},
 year= {2019}
 }
+
+@article{Haering-etal:2020,
+  author    = {S. Haering and
+               T. Oliver and
+               R. Moser},
+  title     = {Active Model Split Hybrid {RANS/LES}},
+  journal   = {Journal of Fluid Mechanics},
+  year      = {2020},
+  note      = {Submitted},
+  url       = {http://arxiv.org/abs/2006.13118},
+}
+
