--- a/docs/references/references.bib
+++ b/docs/references/references.bib
@@ -355,7 +355,7 @@ year= {2019}
   url       = {http://arxiv.org/abs/2006.13118},
 }
 
-@article{Bautista2015,
+@article{Bautista:2015,
   author = {Mary C. Bautista and Louis Dufresne and Christian Masson},
   title = {Hybrid turbulence models for atmospheric flow; A proper comparison with RANS models},
   journal = {E3S Web of Conferences},
@@ -363,7 +363,7 @@ year= {2019}
   url = {https://www.e3s-conferences.org/articles/e3sconf/abs/2015/01/e3sconf_sowe2014_03001/e3sconf_sowe2014_03001.html},
 }
 
-@phdthesis{Bautista2011,
+@phdthesis{Bautista:2011,
   author = {Mary C. Bautista},
   title = {Turbulence modelling of the atmospheric boundary layer over complex topography},
   school = {{\'E}cole de Technologie Sup{\'e}rieure Universit{\'e} du Qu{\'e}bec},
