Update documentation for pull request

--- a/docs/references/references.bib
+++ b/docs/references/references.bib
@@ -379,3 +379,19 @@ year= {2019}
   address = {Montreal, CA},
   month = {October},
 }
+
+@phdthesis{Koblitz:2013,
+  author = {Tilman Koblitz},
+  title = {CFD modeling of non-neutral atmospheric boundary layer conditions},
+  school = {Technical University of Denmark},
+  year = {2013},
+  address = {Roskilde, Denmark},
+  month = {July},
+}
+
+@misc{Adcock:2021,
+  author = {Christiane Adcock and Marc Henry de Frahan and Jeremy Melvin and Ganesh Vijayakumar and Gianluca Iaccarino and Robert Moser and Michael Sprague},
+  title = {SST k-omega Simulations of the Atmospheric Boundary Layer Including the Coriolis Effect},
+  howpublished = {APS DFD},
+  year = {2021},
+}
