--- a/docs/references/references.bib
+++ b/docs/references/references.bib
@@ -173,11 +173,19 @@
 	Title = {On the Filtering of Sound Waves from the Navier-Stokes Equations},
 	Year = {1982}}
 
-@article{Mentor:2003,
+@article{Menter:2003,
 	Author = {Menter, F. R. and Kuntz, M. and R. Langtry},
 	Journal = {Turb, Heat and Mass Trans},
 	Title = {Ten years of industrial experience with the SST turbulence model},
 	Year = {2003}}
+
+@article{Spalart:2007,
+	Author = {Spalart, P. R. and Rumsey, C. L.},
+	Journal = {AIAA Journal},
+	Pages = {2544--2553},
+	Volume = {45},
+	Title = {Effective Inflow Conditions for Turbulence Models in Aerodynamic Calculations},
+	Year = {2007}}
 
 @techreport{Tieszen:2005,
 	Author = {Tieszen, S. and Domino, S. and Black, A.},
