Add k-eps and k-omega RANS models

--- a/docs/references/references.bib
+++ b/docs/references/references.bib
@@ -395,3 +395,21 @@ year= {2019}
   howpublished = {APS DFD},
   year = {2021},
 }
+
+@article{chien1982predictions,
+  title={Predictions of channel and boundary-layer flows with a low-Reynolds-number turbulence model},
+  author={Chien, Kuei-Yuan},
+  journal={AIAA journal},
+  volume={20},
+  number={1},
+  pages={33--38},
+  year={1982}
+}
+
+@book{wilcox1998turbulence,
+  title={Turbulence modeling for CFD},
+  author={Wilcox, David C and others},
+  volume={2},
+  year={1998},
+  publisher={DCW industries La Canada, CA}
+}
